# gitupdt

./: .gitignore  README-ja.md  README.md  pyproject.toml
gitupdt/: __init__.py  gitupdt.py
