[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitupdt"
version = "1.1.1"
description = "A git repository updater"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "hetima"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "GitPython",
    "questionary",
    "packaging",
]

[project.scripts]
gitupdt = "gitupdt.gitupdt:command_main"

[project.urls]
Homepage = "https://github.com/hetima/gitupdt"
